
    * #100707: check for boolop being used as exception class, introducing
      new W0711 message (patch by Tim Hatch)

    * #4014: improve checking of metaclass methods first args, introducing
      new C0204 message (patch by lothiraldan@gmail.com finalized by sthenault)

    * #4685: check for consistency of a module's __all__ variable,
      introducing new E0603 message

    * #100654: fix grammatical error for W0332 message (using 'l' as
      long int identifier)

    * #103656: fix W0231 false positive for missing call to object.__init__
      (patch by lothiraldan@gmail.com)

    * #63424: fix similarity report disabling by properly renaming it to RP0801

    * #103949: create a console_scripts entry point to be used by
      easy_install, buildout and pip

    * fix cross-interpreter issue (non compatible access to __builtins__)

    * stop including tests files in distribution, they causes crash when
      installed with python3 (#72022, #82417, #76910)


2012-07-17  --  0.25.2
    * #93591: Correctly emit warnings about clobbered variable names when an
      except handler contains a tuple of names instead of a single name.
      (patch by tmarek@google.com)

    * #7394: W0212 (access to protected member) not emited on assigments
    (patch by lothiraldan@gmail.com)

    * #18772; no prototype consistency check for mangled methods (patch by
    lothiraldan@gmail.com)

    * #92911: emit W0102 when sets are used as default arguments in functions
      (patch by tmarek@google.com)

    * #77982: do not emit E0602 for loop variables of comprehensions
      used as argument values inside a decorator (patch by tmarek@google.com)

    * #89092: don't emit E0202 (attribute hiding a method) on @property methods

    * #92584: fix pylint-gui crash due to internal API change

    * #87192: fix crash when decorators are accessed through more than one dot
      (for instance @a.b is fine, @a.b.c crash)
